tests/typing/bad/testfile-var3-1.scala
class A {
    var b = true;
    def m(x: Int) { b = x }
}

object Main { def main(args: Array[String]) { } }
